fixed hyperlink issue on mobile

--- a/style.scss
+++ b/style.scss
@@ -6,14 +6,13 @@
 
 body
 {
-    margin-top: 20px ! important;
-    overflow-x: hidden;
-    height: 100%;
+  margin-top: 20px ! important;
+  height: 100%;
 }
 
 i
 {
-    text-indent: 0;
+  text-indent: 0;
 }
 
 table {
@@ -39,11 +38,11 @@ th.title {
 /* ------------ Sidebar Style -------------- */
 
 #front-picture{
-    width:150px;
-    height:150px;
-    border-radius:5%;
-    background-size: cover;
-    margin-bottom: 8px;
+  width:150px;
+  height:150px;
+  border-radius:5%;
+  background-size: cover;
+  margin-bottom: 8px;
 }
 
 .wrapper {
@@ -51,42 +50,25 @@ th.title {
   min-height: 100%;
 }
 
-input[data-function*='swipe'] {
-  position: absolute;
-  opacity: 0;
-}
-
-label[data-function*='swipe'] {
-  position: absolute;
-  color: #8C8C8C;
-  top: 30px;
-  left: 30px;
-  z-index: 1;
-  display: block;
-  text-align: center;
-  transform: translate3d(0,0,0);
-  transition: transform .3s;
-}
-
 #social-icons
 {
-    display: block;
+  display: block;
 }
 
 #social-icons ul {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
 }
 
 #social-icons li {
-    display: inline-block;
-    padding-right: 28px;
+  display: inline-block;
+  padding-right: 28px;
 }
 
 #social-icons a {
-    font-size: 20px;
-    color: rgb(162, 163, 163);
+  font-size: 20px;
+  color: rgb(162, 163, 163);
 }
 
 /* ------------ Content Style -------------- */
@@ -105,79 +87,79 @@ label[data-function*='swipe'] {
 }
 
 .content hr {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border: 0;
-    border-top: 1px solid #F7F1F1;
-    border-bottom: 1px solid #fff;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid #F7F1F1;
+  border-bottom: 1px solid #fff;
 }
 
 .content h1 {
-    font-weight: normal;
-    color: #696969;
-    margin-bottom: 10px;
-    font-size: 25px;
-    font-weight: bold;
+  font-weight: normal;
+  color: #696969;
+  margin-bottom: 10px;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 .content h2 {
-    font-weight: normal;
-    margin-bottom: 5px;
-    color: #666666;
-    font-weight: bold;
+  font-weight: normal;
+  margin-bottom: 5px;
+  color: #666666;
+  font-weight: bold;
 }
 
 .content h3 {
-    font-weight: normal;
-    margin-bottom: 5px;
-    color: #666666;
-    font-weight: bold;
+  font-weight: normal;
+  margin-bottom: 5px;
+  color: #666666;
+  font-weight: bold;
 }
 
 .content p
 {
-    font-family: 'Lusitana', serif;
-    background-color: #fff;
-    font-size: 16px;
-    line-height: 24px;
-    color: #666666;
-    font-weight: 300;
+  font-family: 'Lusitana', serif;
+  background-color: #fff;
+  font-size: 16px;
+  line-height: 24px;
+  color: #666666;
+  font-weight: 300;
 }
 
 .content a {
 
-    font-family: 'Lusitana', serif;
-    background-color: #fff;
-    font-size: 16px;
-    line-height: normal;
-    font-style: normal;
-    color: #8C8C8C;
-    font-weight: 300;
+  font-family: 'Lusitana', serif;
+  background-color: #fff;
+  font-size: 16px;
+  line-height: normal;
+  font-style: normal;
+  color: #8C8C8C;
+  font-weight: 300;
 
 }
 
 .navigation a {
-    background-color: #fff;
-    font-style: normal;
-    color: #8C8C8C;
-    font-weight: 300;
-    padding: 10px;
-    width: 0%;
-    font-size: 16px;
+  background-color: #fff;
+  font-style: normal;
+  color: #8C8C8C;
+  font-weight: 300;
+  padding: 10px;
+  width: 0%;
+  font-size: 16px;
 }
 
 .content pre
 {
-    border:none;
-    width: 70%;
+  border:none;
+  width: 70%;
 
-    /* Generic font style */
-    font-family: Arial,sans-serif;
-    font-size: 13px;
-    font-weight: normal;
-    line-height: 19.2px;
-    word-spacing: 0px;
-    color:#777777;
+  /* Generic font style */
+  font-family: Arial,sans-serif;
+  font-size: 13px;
+  font-weight: normal;
+  line-height: 19.2px;
+  word-spacing: 0px;
+  color:#777777;
 }
 
 .content img
@@ -205,6 +187,7 @@ label[data-function*='swipe'] {
 @media screen and (max-width: 768px) {
   .sidebar {
     width: 100%;
+    height: 70px;
   }
 
   #social-icons ul {
@@ -213,7 +196,6 @@ label[data-function*='swipe'] {
   }
   
   .sidebar menu {
-    height: auto;
     position: relative;
   }
   .sidebar p {float: left;}
